--- a/public/home.html
+++ b/public/home.html
@@ -1,128 +1,24 @@
-<!doctype html>
-<html lang="en" data-theme="dark" class="dark">
-
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Go/Echo+Templ: Some Exploration for GO HTMX and Templ">
-	<meta name="google" content="notranslate">
-	<link rel="shortcut icon" href="/img/templ.png" type="image/png">
-	<link rel="stylesheet" href="/css/styles.css">
-	<link rel="stylesheet" href="/css/static.css">
-	<link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-	<title>Harish Gokul</title>
-	<script src="https://unpkg.com/htmx.org@1.9.9"
-		integrity="sha384-QFjmbokDn2DjBjq+fM+8LUIVrAgqcNW2s0PjAxHETgRn9l4fvX31ZxDxvwQnyMOX"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-	<script src="https://unpkg.com/hyperscript.org@0.9.12"></script><!-- Alpine.js --><!-- Alpine Plugins -->
-	<script defer src="https://unpkg.com/@alpinejs/focus@3.x.x/dist/cdn.min.js"></script><!-- Alpine Core -->
-	<script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-	<script>
-		/* Script to toggle light and  mode */
-	</script>
-	<script type="module" src="/js/launch.js"></script>
-</head>
-
-<body hx-boost="true"
-	class="dark:bg-terminal-base font-mono bg-terminal-base text-white leading-normal tracking-tighter">
-	<layout id="layout" class="w-full h-screen flex flex-col">
-		<header class="bg-primary flex justify-between items-center py-1 px-4">
-			<div class="flex space-x-4"><button hx-post="/commands" hx-target="#commandDisplay"
-					hx-swap="innerHTML transition:true"
-					class="text-white font-bold tracking-tight btn btn-ghost btn-sm  hover:bg-primary-400 ">home</button>
-				<button hx-get="/about" hx-target="#commandDisplay" hx-swap="transition:true"
-					class="text-white btn btn-ghost btn-sm  hover:bg-primary-400">readme</button> <button
-					hx-get="/project" hx-indicator="#spinner" hx-target="#commandDisplay" hx-swap="transition:true"
-					class="text-white btn btn-ghost btn-sm  hover:bg-primary-400">projects</button> <button
-					hx-get="/blog" hx-indicator="#spinner" hx-target="#commandDisplay" hx-swap="transition:true"
-					class="text-white disabled">blog <span class="text-xs">(coming soon)</span></button>
-			</div>
-			<div class="flex items-center space-x-2"><a href="https://www.linkedin.com/in/harish-gokul-39432718b/"
-					class="text-white btn btn-ghost btn-xs">LinkedIn</a> <a href="https://github.com/harish876"
-					class="text-white btn btn-ghost btn-xs">Github</a></div>
-		</header>
-		<div id="commandDisplay" class="flex flex-col h-screen flex-grow mt-4 px-4 py-8">
-			<div class="h-full flex-grow px-4">
-				<div
-					class="group flex h-8 items-center active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-					<span class="text-xl font bold pb-8">Introduction</span>
-				</div>
-				<ul id="list" class="text-white flex flex-col gap-4 py-2" role="listbox" aria-activedescendant="item1">
-					<li tabindex="0" id="item1" number="1" role="option"
-						class="group flex h-8 items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-						<span class="px-4">1. hi my name harish gokul. this is my vs code themed vim editor
-							(ikik)</span>
-					</li>
-					<li tabindex="0" id="item2" number="2" role="option"
-						class="group flex h-8 items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400 active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-						<span class="text-gray-500 px-4">2. # hit "i" to get into insert mode.</span>
-					</li>
-					<li tabindex="0" id="item3" number="3" role="option"
-						class="group flex h-8 items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-						<span class="text-gray-500 px-4">3. # type "man" to open the friendly manual for navigation
-							options without a mouse. (coming soon)</span>
-					</li>
-					<li tabindex="0" id="item4" number="4" role="option"
-						class="group flex h-8 items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-						<span class="text-gray-500 px-4">4. # use "help" to list out all options</span>
-					</li><a href="https://github.com/harish876/hypefx" target="_blank" id="item1" tabindex="0"
-						number="5" role="option"
-						class="group flex h-8 items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none [&amp;&gt;svg]:hover:block [&amp;&gt;svg]:active:text-gray-11"><span
-							class="text-gray-500 px-4">5. # this was project was built using go and htmx and uses this
-							repo. (Click to go to the repo)</span> <svg
-							class="hidden w-5 h-5 ml-6 text-gray-10 shrink-0" viewBox="0 0 20 20" fill="none"
-							xmlns="http://www.w3.org/2000/svg">
-							<g id="square-arrow-top-right, open, new, link, open link, box, arrow">
-								<path class="stroke-current"
-									d="M15.2083 11.6667V16.875H3.125V4.79167H7.70833M11.4583 3.125H16.875V8.54167M9.16667 10.8333L16.25 3.75"
-									stroke-width="1.5" stroke-linecap="square"></path>
-							</g>
-						</svg></a>
-				</ul>
-			</div>
-		</div>
-		<div class="py-8 group flex h-8 items-center hover:bg-terminal-hover">
-			<div class="bg-primary-400 w-[2px] h-[30px] shrink-0 animate-blink"></div>
-			<form hx-post="/commands" hx-indicator="#spinner" hx-target="#commandDisplay"
-				hx-swap="innerHTML transition:true" hx-on::after-request="this.reset()"><input name="command"
-					id="commandBox" type="text" autocomplete="off" placeholder="$ enter command here"
-					class="px-4 border-none focus:ring-transparent text-white leading-tight bg-transparent"></form>
-		</div>
-		<footer class="bg-primary flex flex-row justify-between items-center">
-			<div class="flex flex-row space-x-4"><span id="currentText"
-					class="bg-secondary-500 text-white px-2 text-sm">home.txt</span> <span id="spinner"
-					class="loading loading-infinity loading-sm htmx-indicator"></span></div>
-			<div class="flex flex-row space-x-4"><span id="tabSize"
-					class="text-white px-2 text-sm hover:bg-primary-400 cursor-pointer">Ln 81, Col 122</span> <span
-					class="text-white px-2 text-sm hover:bg-primary-400 cursor-pointer">htmx</span> <span
-					class="text-white px-2 text-sm hover:bg-primary-400 cursor-pointer">templ</span> <span id="tabSize"
-					class="text-white px-2 text-sm hover:bg-primary-400 cursor-pointer">Tab Size: 4</span> <span
-					id="errorText" class="bg-error-base text-white px-2 text-sm">Errors</span></div>
-		</footer>
-	</layout>
-	<script lang="js">
-		document.body.addEventListener('htmx:beforeSwap', function (evt) {
-			if (evt.detail.xhr.status === 404) {
-				// alert the user when a 404 occurs (maybe use a nicer mechanism than alert())
-				alert("Error: Could Not Find Resource");
-			} else if (evt.detail.xhr.status === 422) {
-				// allow 422 responses to swap as we are using this as a signal that
-				// a form was submitted with bad data and want to rerender with the
-				// errors
-				//
-				// set isError to false to avoid error logging in console
-				alert("Bad Request Debug")
-				evt.detail.shouldSwap = true;
-				evt.detail.isError = false;
-			} else if (evt.detail.xhr.status === 418) {
-				// if the response code 418 (I'm a teapot) is returned, retarget the
-				// content of the response to the element with the id `teapot`s
-				evt.detail.shouldSwap = true;
-				evt.detail.target = htmx.find("#teapot");
-			}
-		});
-	</script>
-</body>
-
-</html>
+<!doctype html><html lang="en" data-theme="dark" class="dark"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="description" content="Harish Portfolio"><meta name="google" content="notranslate"><link rel="stylesheet" href="/css/styles.css"><link rel="stylesheet" href="/css/static.css"><link rel="icon" type="image/x-icon" href="/img/favicon.ico"><title>Harish Gokul</title><script src="https://unpkg.com/htmx.org@1.9.9" integrity="sha384-QFjmbokDn2DjBjq+fM+8LUIVrAgqcNW2s0PjAxHETgRn9l4fvX31ZxDxvwQnyMOX" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script><script src="https://unpkg.com/hyperscript.org@0.9.12"></script><script defer src="https://unpkg.com/@alpinejs/focus@3.x.x/dist/cdn.min.js"></script><script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script><script>
+                /* Script to toggle light and  mode */
+            </script><script type="module" src="/js/launch.js"></script></head><body hx-boost="true" class="dark:bg-terminal-base font-mono bg-terminal-base text-white leading-normal tracking-tighter"><layout id="layout" class="w-full h-screen flex flex-col"><header class="bg-primary flex justify-between items-center py-1 px-4"><div class="flex space-x-4"><button hx-get="/" hx-target="body" hx-swap="innerHTML transition:true" class="text-white font-bold tracking-tight btn btn-ghost btn-sm  hover:bg-primary-400 ">home</button> <button hx-get="/about" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white btn btn-ghost btn-sm  hover:bg-primary-400">readme</button> <button hx-get="/project" hx-indicator="#spinner" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white btn btn-ghost btn-sm  hover:bg-primary-400">projects</button> <button hx-get="/blog" hx-indicator="#spinner" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white disabled">blog <span class="text-xs">(coming soon)</span></button></div><div class="flex items-center space-x-2"><a href="https://www.linkedin.com/in/harish-gokul-39432718b/" class="text-white btn btn-ghost btn-xs">LinkedIn</a> <a href="https://github.com/harish876" class="text-white btn btn-ghost btn-xs">Github</a></div></header><div id="commandDisplay" class="flex flex-col h-screen flex-grow mt-4 px-4 py-8"><div class="h-full flex-grow px-4"><div class="group flex h-8 items-center active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none"><span class="text-xl font bold pb-8">Introduction</span></div><ul id="list" class="text-white flex flex-col gap-4 py-2" role="listbox" aria-activedescendant="item1"><li tabindex="0" id="item1" number="1" role="option" class="group flex h-8 items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none"><span class="px-4">1. hi my name harish gokul. this is my vs code themed vim editor (ikik)</span></li><li tabindex="0" id="item2" number="2" role="option" class="group flex h-8 items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400 active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none"><span class="text-gray-500 px-4">2. # hit "i" to get into insert mode.</span></li><li tabindex="0" id="item3" number="3" role="option" class="group flex h-8 items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none"><span class="text-gray-500 px-4">3. # type "man" to open the friendly manual for navigation options without a mouse. (coming soon)</span></li><li tabindex="0" id="item4" number="4" role="option" class="group flex h-8 items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none"><span class="text-gray-500 px-4">4. # use "help" to list out all options</span></li><a href="https://github.com/harish876/hypefx" target="_blank" id="item1" tabindex="0" number="5" role="option" class="group flex h-8 items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none [&amp;&gt;svg]:hover:block [&amp;&gt;svg]:active:text-gray-11"><span class="text-gray-500 px-4">5. # this was project was built using go and htmx and uses this repo. (Click to go to the repo)</span> <svg class="hidden w-5 h-5 ml-6 text-gray-10 shrink-0" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="square-arrow-top-right, open, new, link, open link, box, arrow"><path class="stroke-current" d="M15.2083 11.6667V16.875H3.125V4.79167H7.70833M11.4583 3.125H16.875V8.54167M9.16667 10.8333L16.25 3.75" stroke-width="1.5" stroke-linecap="square"></path></g></svg></a></ul></div></div><div class="py-8 group flex h-8 items-center hover:bg-terminal-hover"><div class="bg-primary-400 w-[2px] h-[30px] shrink-0 animate-blink"></div><form hx-post="/commands" hx-indicator="#spinner" hx-target="#commandDisplay" hx-swap="innerHTML transition:true" hx-on::after-request="this.reset()"><input name="command" id="commandBox" type="text" autocomplete="off" placeholder="$ enter command here" class="px-4 border-none focus:ring-transparent text-white leading-tight bg-transparent"></form></div><footer class="bg-primary flex flex-row justify-between items-center"><div class="flex flex-row space-x-4"><span id="currentText" hx-swap-oob="true" class="bg-secondary-500 text-white px-2 text-sm">home.txt</span> <span id="spinner" class="loading loading-infinity loading-sm htmx-indicator"></span></div><div class="flex flex-row space-x-4"><span id="tabSize" class="text-white px-2 text-sm hover:bg-primary-400 cursor-pointer">Ln 81, Col 122</span> <span class="text-white px-2 text-sm hover:bg-primary-400 cursor-pointer">htmx</span> <span class="text-white px-2 text-sm hover:bg-primary-400 cursor-pointer">templ</span> <span id="tabSize" class="text-white px-2 text-sm hover:bg-primary-400 cursor-pointer">Tab Size: 4</span> <span id="errorText" class="bg-error-base text-white px-2 text-sm">Errors</span></div></footer></layout><script lang="js">
+			     document.body.addEventListener('htmx:beforeSwap', function(evt) {
+			    if(evt.detail.xhr.status === 404){
+			        // alert the user when a 404 occurs (maybe use a nicer mechanism than alert())
+			        alert("Error: Could Not Find Resource");
+			    } else if(evt.detail.xhr.status === 422){
+			        // allow 422 responses to swap as we are using this as a signal that
+			        // a form was submitted with bad data and want to rerender with the
+			        // errors
+			        //
+			        // set isError to false to avoid error logging in console
+                    alert("Bad Request Debug")
+			        evt.detail.shouldSwap = true;
+			        evt.detail.isError = false;
+			    } else if(evt.detail.xhr.status === 418){
+			        // if the response code 418 (I'm a teapot) is returned, retarget the
+			        // content of the response to the element with the id `teapot`s
+			        evt.detail.shouldSwap = true;
+			        evt.detail.target = htmx.find("#teapot");
+			    }
+			});
+			</script></body></html>
